--- a/3. API REST and Cors/package.json
+++ b/3. API REST and Cors/package.json
@@ -4,7 +4,8 @@
   "description": "Created API Rest and Cors",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
